setting things up

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Be-U-On</title>
+    <style>
+      html, body, #app {
+        height: 100%;
+      }
+      #app {
+        display: flex;
+        align-items: center;
+      }
+    </style>
   </head>
-  <body>
+  <body class="bg-light">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
