--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         height: 100%;
       }
       #app {
-        display: flex;
-        align-items: center;
+        min-height: 100%;
       }
     </style>
   </head>
