--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <body class="bg-light">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
   </body>
 </html>
